# ks-test

./: ks-test.cabal
src/Data/Random/Distribution/: Kolmogorov.hs
src/Math/Statistics/: KSTest.hs
src/Numeric/: LinearAlgebra.hs
