name:                   ks-test
version:                0.0.0.1
stability:              experimental

cabal-version:          >= 1.2
build-type:             Simple

author:                 James Cook <mokus@deepbondi.net>
maintainer:             James Cook <mokus@deepbondi.net>
license:                Unspecified
homepage:               /dev/null

category:               Math, Numerical
synopsis:               Kolmogorov distribution and Kolmogorov-Smirnov test.
description:            Kolmogorov distribution and Kolmogorov-Smirnov test.

Library
  hs-source-dirs:       src
  exposed-modules:      Data.Random.Distribution.Kolmogorov
                        Math.Statistics.KSTest
  other-modules:        Numeric.LinearAlgebra
  build-depends:        base >= 3 && <5, gamma, random-fu, roots, vector
